Resolve PR comments
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>